--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.18",
     "expo": "~53.0.12",
+    "expo-blur": "~14.1.5",
+    "expo-font": "~13.3.2",
+    "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
     "moti": "^0.30.0",
     "react": "19.0.0",
